# processor

./: CMakeLists.txt  README.md  command_gen2.py  command_generator.py  compile.cpp  execute.cpp  main.cpp
asm/: factorial  fib  square
headers/: CompileInstructions.hpp  CompiledInstructions.hpp  args.hpp  commands.inl  compiler.hpp  executeInstructions.hpp  executor.hpp  final_commands.hpp  instructions.hpp  instructionsDefines.h  text.hpp
src/: args.hpp  assembler.cpp  assembler.hpp  assembly_reader.hpp  command.gen.hpp  commands.txt  compiler.cpp  disassembler.cpp  executor.cpp  processor.hpp  processor.inl  processor_execute_command.gen.inl  text.cpp  text.hpp
tmp/: assembler.hpp  assembly_reader.hpp  command_generator.py  compile.cpp  disassembler.hpp  disassembly.cpp  processor.hpp  run.cpp
